--- a/.config
+++ b/.config
@@ -495,7 +495,7 @@ CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="MCPE"
 CONFIG_VERSION_NUMBER="240601"
-CONFIG_VERSION_CODE="02"
+CONFIG_VERSION_CODE="03"
 CONFIG_VERSION_REPO="https://downloads.openwrt.org/snapshots"
 CONFIG_VERSION_HOME_URL=""
 CONFIG_VERSION_MANUFACTURER=""
@@ -1755,8 +1755,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_TAR_GNU_EXTENSIONS=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TAR_TO_COMMAND=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TAR_UNAME_GNAME=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TAR_NOPRESERVE_TIME=y
-CONFIG_BUSYBOX_CONFIG_UNZIP=y
-# CONFIG_BUSYBOX_CONFIG_FEATURE_UNZIP_CDF is not set
+# CONFIG_BUSYBOX_CONFIG_UNZIP is not set
 # end of Archival Utilities
 
 #
@@ -7918,7 +7917,7 @@ CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_PACKAGE_lz4 is not set
 # CONFIG_PACKAGE_pigz is not set
 # CONFIG_PACKAGE_unrar is not set
-# CONFIG_PACKAGE_unzip  is not set
+CONFIG_PACKAGE_unzip=y
 # CONFIG_PACKAGE_xz-utils is not set
 # CONFIG_PACKAGE_zipcmp is not set
 # CONFIG_PACKAGE_zipmerge is not set
