--- a/.config
+++ b/.config
@@ -498,7 +498,7 @@ CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="MCPE"
 CONFIG_VERSION_NUMBER="240601"
-CONFIG_VERSION_CODE="01"
+CONFIG_VERSION_CODE="02"
 CONFIG_VERSION_REPO="https://downloads.openwrt.org/snapshots"
 CONFIG_VERSION_HOME_URL=""
 CONFIG_VERSION_MANUFACTURER=""
@@ -506,7 +506,7 @@ CONFIG_VERSION_MANUFACTURER_URL=""
 CONFIG_VERSION_BUG_URL=""
 CONFIG_VERSION_SUPPORT_URL=""
 CONFIG_VERSION_PRODUCT=""
-CONFIG_VERSION_HWREV="R2S"
+CONFIG_VERSION_HWREV="R68s"
 CONFIG_VERSION_FILENAMES=y
 CONFIG_VERSION_CODE_FILENAMES=y
 # CONFIG_PER_FEED_REPO is not set
@@ -8792,3 +8792,4 @@ CONFIG_PACKAGE_v2dat=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+
