disable bzip2 for busybox

--- a/.config
+++ b/.config
@@ -528,7 +528,7 @@ CONFIG_TARGET_INIT_CMD="/sbin/init"
 CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="MCPE"
-CONFIG_VERSION_NUMBER="240604-01"
+CONFIG_VERSION_NUMBER="240604-02"
 CONFIG_VERSION_CODE=""
 CONFIG_VERSION_REPO="https://downloads.openwrt.org/snapshots"
 CONFIG_VERSION_HOME_URL=""
@@ -1762,9 +1762,7 @@ CONFIG_BUSYBOX_CONFIG_ZCAT=y
 # CONFIG_BUSYBOX_CONFIG_UNXZ is not set
 # CONFIG_BUSYBOX_CONFIG_XZCAT is not set
 # CONFIG_BUSYBOX_CONFIG_XZ is not set
-CONFIG_BUSYBOX_CONFIG_BZIP2=y
-CONFIG_BUSYBOX_CONFIG_BZIP2_SMALL=0
-CONFIG_BUSYBOX_CONFIG_FEATURE_BZIP2_DECOMPRESS=y
+# CONFIG_BUSYBOX_CONFIG_BZIP2 is not set
 # CONFIG_BUSYBOX_CONFIG_CPIO is not set
 # CONFIG_BUSYBOX_CONFIG_DPKG is not set
 # CONFIG_BUSYBOX_CONFIG_DPKG_DEB is not set
