--- a/.config
+++ b/.config
@@ -4222,7 +4222,7 @@ CONFIG_PACKAGE_lua-neturl=y
 # CONFIG_PACKAGE_luarocks is not set
 # CONFIG_PACKAGE_luasec is not set
 # CONFIG_PACKAGE_luasoap is not set
-# CONFIG_PACKAGE_luasocket is not set
+CONFIG_PACKAGE_luasocket=y
 # CONFIG_PACKAGE_luasocket5.3 is not set
 # CONFIG_PACKAGE_luasql-mysql is not set
 # CONFIG_PACKAGE_luasql-pgsql is not set
@@ -8930,7 +8930,17 @@ CONFIG_PACKAGE_procps-ng=y
 # CONFIG_PACKAGE_procps-ng-watch is not set
 # CONFIG_PACKAGE_progress is not set
 # CONFIG_PACKAGE_prometheus is not set
-# CONFIG_PACKAGE_prometheus-node-exporter-lua is not set
+CONFIG_PACKAGE_prometheus-node-exporter-lua=y
+# CONFIG_PACKAGE_prometheus-node-exporter-lua-dawn is not set
+# CONFIG_PACKAGE_prometheus-node-exporter-lua-hostapd_ubus_stations is not set
+CONFIG_PACKAGE_prometheus-node-exporter-lua-nat_traffic=y
+CONFIG_PACKAGE_prometheus-node-exporter-lua-netstat=y
+CONFIG_PACKAGE_prometheus-node-exporter-lua-openwrt=y
+# CONFIG_PACKAGE_prometheus-node-exporter-lua-snmp6 is not set
+# CONFIG_PACKAGE_prometheus-node-exporter-lua-textfile is not set
+# CONFIG_PACKAGE_prometheus-node-exporter-lua-uci_dhcp_host is not set
+# CONFIG_PACKAGE_prometheus-node-exporter-lua-wifi is not set
+# CONFIG_PACKAGE_prometheus-node-exporter-lua-wifi_stations is not set
 # CONFIG_PACKAGE_prometheus-statsd-exporter is not set
 # CONFIG_PACKAGE_pservice is not set
 # CONFIG_PACKAGE_psmisc is not set
