--- a/.config
+++ b/.config
@@ -4222,7 +4222,7 @@ CONFIG_PACKAGE_lua-neturl=y
 # CONFIG_PACKAGE_luarocks is not set
 # CONFIG_PACKAGE_luasec is not set
 # CONFIG_PACKAGE_luasoap is not set
-CONFIG_PACKAGE_luasocket=y
+# CONFIG_PACKAGE_luasocket is not set
 # CONFIG_PACKAGE_luasocket5.3 is not set
 # CONFIG_PACKAGE_luasql-mysql is not set
 # CONFIG_PACKAGE_luasql-pgsql is not set
@@ -8916,7 +8916,7 @@ CONFIG_PACKAGE_procps-ng=y
 # CONFIG_PACKAGE_procps-ng-pgrep is not set
 # CONFIG_PACKAGE_procps-ng-pkill is not set
 # CONFIG_PACKAGE_procps-ng-pmap is not set
-# CONFIG_PACKAGE_procps-ng-ps is not set
+CONFIG_PACKAGE_procps-ng-ps=y
 # CONFIG_PACKAGE_procps-ng-pwdx is not set
 # CONFIG_PACKAGE_procps-ng-skill is not set
 # CONFIG_PACKAGE_procps-ng-slabtop is not set
@@ -8925,26 +8925,16 @@ CONFIG_PACKAGE_procps-ng=y
 # CONFIG_PACKAGE_procps-ng-tload is not set
 # CONFIG_PACKAGE_procps-ng-top is not set
 # CONFIG_PACKAGE_procps-ng-uptime is not set
-# CONFIG_PACKAGE_procps-ng-vmstat is not set
-# CONFIG_PACKAGE_procps-ng-w is not set
+CONFIG_PACKAGE_procps-ng-vmstat=y
+CONFIG_PACKAGE_procps-ng-w=y
 # CONFIG_PACKAGE_procps-ng-watch is not set
 # CONFIG_PACKAGE_progress is not set
 # CONFIG_PACKAGE_prometheus is not set
-CONFIG_PACKAGE_prometheus-node-exporter-lua=y
-# CONFIG_PACKAGE_prometheus-node-exporter-lua-dawn is not set
-# CONFIG_PACKAGE_prometheus-node-exporter-lua-hostapd_ubus_stations is not set
-CONFIG_PACKAGE_prometheus-node-exporter-lua-nat_traffic=y
-CONFIG_PACKAGE_prometheus-node-exporter-lua-netstat=y
-CONFIG_PACKAGE_prometheus-node-exporter-lua-openwrt=y
-# CONFIG_PACKAGE_prometheus-node-exporter-lua-snmp6 is not set
-# CONFIG_PACKAGE_prometheus-node-exporter-lua-textfile is not set
-# CONFIG_PACKAGE_prometheus-node-exporter-lua-uci_dhcp_host is not set
-# CONFIG_PACKAGE_prometheus-node-exporter-lua-wifi is not set
-# CONFIG_PACKAGE_prometheus-node-exporter-lua-wifi_stations is not set
+# CONFIG_PACKAGE_prometheus-node-exporter-lua is not set
 # CONFIG_PACKAGE_prometheus-statsd-exporter is not set
 # CONFIG_PACKAGE_pservice is not set
 # CONFIG_PACKAGE_psmisc is not set
-# CONFIG_PACKAGE_pv is not set
+CONFIG_PACKAGE_pv=y
 # CONFIG_PACKAGE_qfirehose is not set
 # CONFIG_PACKAGE_qmi-utils is not set
 # CONFIG_PACKAGE_qrencode is not set
