--- a/.config
+++ b/.config
@@ -8664,7 +8664,7 @@ CONFIG_PACKAGE_procps-ng-ps=y
 # CONFIG_PACKAGE_procps-ng-top is not set
 # CONFIG_PACKAGE_procps-ng-uptime is not set
 CONFIG_PACKAGE_procps-ng-vmstat=y
-# CONFIG_PACKAGE_procps-ng-w is not set
+CONFIG_PACKAGE_procps-ng-w=y
 # CONFIG_PACKAGE_procps-ng-watch is not set
 # CONFIG_PACKAGE_progress is not set
 # CONFIG_PACKAGE_prometheus is not set
