--- a/.config
+++ b/.config
@@ -495,7 +495,7 @@ CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="MCPE"
 CONFIG_VERSION_NUMBER="240601"
-CONFIG_VERSION_CODE="07"
+CONFIG_VERSION_CODE="08"
 CONFIG_VERSION_REPO="https://downloads.openwrt.org/snapshots"
 CONFIG_VERSION_HOME_URL=""
 CONFIG_VERSION_MANUFACTURER=""
@@ -1728,9 +1728,7 @@ CONFIG_BUSYBOX_CONFIG_ZCAT=y
 # CONFIG_BUSYBOX_CONFIG_UNXZ is not set
 # CONFIG_BUSYBOX_CONFIG_XZCAT is not set
 # CONFIG_BUSYBOX_CONFIG_XZ is not set
-CONFIG_BUSYBOX_CONFIG_BZIP2=y
-CONFIG_BUSYBOX_CONFIG_BZIP2_SMALL=0
-CONFIG_BUSYBOX_CONFIG_FEATURE_BZIP2_DECOMPRESS=y
+# CONFIG_BUSYBOX_CONFIG_BZIP2 is not set
 # CONFIG_BUSYBOX_CONFIG_CPIO is not set
 # CONFIG_BUSYBOX_CONFIG_DPKG is not set
 # CONFIG_BUSYBOX_CONFIG_DPKG_DEB is not set
@@ -8815,4 +8813,3 @@ CONFIG_PACKAGE_v2dat=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
-
